[package]
name = "rust-dns"
version = "0.1.1"
edition = "2021"
authors = ["Dinesh Talwadker"]
description = "A lightweight, high-performance DNS server implementation in Rust"
license = "MIT"
repository = "https://github.com/dinxsh/rdns"
readme = "readme.md"
keywords = ["dns", "server", "network", "protocol", "dns-server"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
clap = "3.2"